make gallery overflow-x hidden to fix mobile issue

--- a/assets/_sass/spotlights/components/_image-gallery.scss
+++ b/assets/_sass/spotlights/components/_image-gallery.scss
@@ -1,4 +1,12 @@
 .sc-image-gallery {
+  overflow-x: hidden;
+
+  // img {
+  //   @include breakpoint($break: 'medium', $dir: 'max-width') {
+  //     height: calc(50vh - 48px);
+  //   }
+  // }
+
   &__image-single {
     margin-right: 0.5rem;
 
